[gd_scene load_steps=6 format=3 uid="uid://d0l4m5n6o7r8"]

[ext_resource type="Script" uid="uid://cfmvf1rjdday1" path="res://Scripts/game.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://b8j2k1m3n4p5" path="res://Scenes/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://dak3l2m4n5q6" path="res://Scenes/enemy.tscn" id="3_enemy"]
[ext_resource type="PackedScene" path="res://Scenes/fast_enemy.tscn" id="3_fast_enemy"]
[ext_resource type="Script" uid="uid://d3ptyr26luidn" path="res://Scripts/grid_background.gd" id="4_bg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_script")
enemy_scene = ExtResource("3_enemy")
fast_enemy_scene = ExtResource("3_fast_enemy")

[node name="Background" type="Node2D" parent="."]
z_index = -10
script = ExtResource("4_bg")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(576, 324)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XPBar" type="ProgressBar" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
show_percentage = false

[node name="TimeLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 35.0
offset_right = 20.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "00:00"

[node name="Label" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -43.0
offset_right = 60.0
offset_bottom = -20.0
grow_vertical = 0
text = "Stats"

[node name="PauseMenu" type="Panel" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="CanvasLayer/UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"

[node name="LevelUpMenu" type="Panel" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/LevelUpMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/LevelUpMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level Up!"
horizontal_alignment = 1

[node name="Option1" type="Button" parent="CanvasLayer/UI/LevelUpMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Button" parent="CanvasLayer/UI/LevelUpMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Option 2"

[node name="Option3" type="Button" parent="CanvasLayer/UI/LevelUpMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Option 3"

[connection signal="pressed" from="CanvasLayer/UI/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/PauseMenu/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
